22.09.2013 git
- added favicon on all deltasql pages
- added twitter follow me on deltasql webpage

20.09.2013 git
- added Get Synchronization Table as indipendent menu entry, both in the navigation bar and on the main page

19.9.2013 git
- added sqlite driver and support to dbredactor client

2.9.2013 git
- fixed warning in synchronization form when project, from or to branches are missing.

*******************************
1.6.3 Release Notes (1.9.2013)
 
  Major features: New toolbox page listing tools which help in script creation
				  The first two tools support creation of INSERT scripts, and
				  of INSERT,UPDATE,DELETE scripts based on .csv exported from your SQL client.
				  This in case your SQL client does not have an SQL export feature, or if you want to record 
				  configurations changes on big applications mantained and developed by a third party.
				  In such case, you would export the db table before doing the changes as .csv, and after doing it.
				  The provided tool will generate automatically an SQL script with the changes, the script can then
				  be submitted to deltasql in the usual way.
  
                  Added Microsoft SQL server JDBC driver to dbredactor
 
  Fixes: Bash client fixed by Thanos Efraimidis, retrieving version number did not work in all circumstances
		 
  Minor: Removed warnings from Edit Module and Edit Script page
         Preparing database schema to general merging feature
        
*******************************

9.8.2013 git
- added latest Microsoft SQL driver to distribution of dbredactor client 

16.7-25.7.2013 git
- created a toolbox page, collecting tools which help to create script
- developed two new tools: createinsertsfromcsv and fromtwocsvcreatesqldiff,
 which use comma separated value files (.csv) to create INSERT, and INSERT,UPDATE,DELETE
  scripts in SQL. Both tools infer the field type (numeric or literal) from the .csv content.